gran cambio falta acabar cambate y enemigos

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "files.associations": {
         "list.h": "c",
-        "extra.h": "c"
+        "extra.h": "c",
+        "stdio.h": "c",
+        "stack.h": "c",
+        "hashmap.h": "c"
     }
 }
