--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,12 @@
     "extra.h": "c",
     "stdio.h": "c",
     "stack.h": "c",
-    "hashmap.h": "c"
+    "hashmap.h": "c",
+    "stdbool.h": "c",
+    "string.h": "c",
+    "pelea.h": "c",
+    "sprite.h": "c",
+    "stdlib.h": "c"
   },
   "C_Cpp_Runner.cCompilerPath": "gcc",
   "C_Cpp_Runner.cppCompilerPath": "g++",
